# devscale_ai_3rd_assignment

./: .env.example  README.md  dev.db  pyproject.toml  report.md
alembic/: env.py
alembic/versions/: a7669db9311e_initdb.py  f992691a265d_2nd.py
app/: main.py  worker.py
app/core/: settings.py
app/models/: database.py  engine.py
app/modules/research/: router.py  schema.py  services.py  tasks.py  utils.py
