[project]
name = "fastapi-researchnew"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "openai>=2.41.1",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "scalar-fastapi>=1.8.2",
    "sqlmodel>=0.0.38",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
